--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "antd": "^3.23.2",
+        "axios": "^0.19.0",
         "babel-plugin-import": "^1.12.1",
         "customize-cra": "^0.6.0",
         "less": "^3.10.3",
@@ -12,7 +13,8 @@
         "react-app-rewired": "^2.1.3",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "3.1.1"
+        "react-scripts": "3.1.1",
+        "store": "^2.0.12"
     },
     "scripts": {
         "start": "react-app-rewired start",
