--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
         "customize-cra": "^0.6.0",
         "less": "^3.10.3",
         "less-loader": "^5.0.0",
+        "md5": "^2.2.1",
         "react": "^16.9.0",
         "react-app-rewired": "^2.1.3",
         "react-dom": "^16.9.0",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "3.1.1",
-        "store": "^2.0.12"
+        "react-scripts": "3.1.1"
     },
     "scripts": {
         "start": "react-app-rewired start",
@@ -37,4 +37,5 @@
             "last 1 safari version"
         ]
     }
+
 }
