--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "less": "^3.10.3",
         "less-loader": "^5.0.0",
         "md5": "^2.2.1",
+        "moment": "^2.24.0",
         "react": "^16.9.0",
         "react-app-rewired": "^2.1.3",
         "react-dom": "^16.9.0",
@@ -37,5 +38,4 @@
             "last 1 safari version"
         ]
     }
-
 }
